# IlluminationCut

./: .gitignore  README.txt
embree_rtc/: readme.txt
embree_rtc/lib/x64/: embree.lib
embree_rtc_linux/: readme.txt
embree_rtc_linux/lib/x64/: libembree.so.2  libembree_xeonphi.so.2.3.2
renderer/: CMakeLists.txt  embree-renderer_vs2010.sln
renderer/common/cmake/: ispc.props
renderer/common/image/: image.vcproj  image.vcxproj
renderer/common/lexers/: lexers.vcproj  lexers.vcxproj
renderer/common/math/: bbox.h  color_scalar.h  color_sse.h  linearspace3.h  vec1.h  vec6.h  vector3f_mic.h  vector3f_sse.h
renderer/devices/device_singleray/: CMakeLists.txt  default.h  device_singleray.icproj  device_singleray.vcproj  device_singleray.vcxproj
renderer/devices/device_singleray/api/: scene.cpp  scene.h  scene_flat.h  singleray_device.cpp
renderer/devices/device_singleray/brdfs/: compositedbrdf.h  lambertian.h  specular.h
renderer/devices/device_singleray/clustering/: icParameters.h  icStatistics.cpp  icStatistics.h
renderer/devices/device_singleray/clustering/illuminationcut/: icIlluminationCut.cpp  icIlluminationCut.h  icIntegrator.cpp  icIntegrator.h  icLighttree.cpp  icLighttree.h  icPixeltree.cpp  icPixeltree.h  icRenderer.cpp  icRenderer.h
renderer/devices/device_singleray/clustering/lightcuts/: ctIntegrator.cpp  ctIntegrator.h  ctKdTree.cpp  ctKdTree.h  ctLightcuts.cpp  ctLightcuts.h  ctRenderer.cpp  ctRenderer.h
renderer/devices/device_singleray/clustering/lightslice/: lsArrays.h  lsDistribution1D.h  lsFastCone.h  lsGatherPointShooter.cpp  lsGatherPointShooter.h  lsIntegrator.cpp  lsIntegrator.h  lsKdtree.h  lsKnnMatrix.cpp  lsKnnMatrix.h  lsKnnMatrixImpl.cpp  lsKnnMatrixImpl.h  lsLightData.cpp  lsLightData.h  lsLightEval.cpp  lsLightEval.h  lsPathSampler.h  lsRandom.h  lsRenderer.cpp  lsRenderer.h
renderer/devices/device_singleray/clustering/lightslice/gsl/include/gsl/: gsl_bspline.h  gsl_cdf.h  gsl_eigen.h  gsl_fft.h  gsl_integration.h  gsl_interp.h  gsl_linalg.h  gsl_matrix_char.h  gsl_matrix_complex_double.h  gsl_matrix_complex_float.h  gsl_matrix_complex_long_double.h  gsl_matrix_double.h  gsl_matrix_float.h  gsl_matrix_int.h  gsl_matrix_long.h  gsl_matrix_long_double.h  gsl_matrix_short.h  gsl_matrix_uchar.h  gsl_matrix_uint.h  gsl_matrix_ulong.h  gsl_matrix_ushort.h  gsl_multifit.h  gsl_multifit_nlin.h  gsl_nan.h  gsl_poly.h  gsl_pow_int.h  gsl_sf_bessel.h  gsl_sf_gamma.h  gsl_sort_char.h  gsl_sort_double.h  gsl_sort_float.h  gsl_sort_int.h  gsl_sort_long.h  gsl_sort_long_double.h  gsl_sort_short.h  gsl_sort_uchar.h  gsl_sort_uint.h  gsl_sort_ulong.h  gsl_sort_ushort.h  gsl_sort_vector_char.h  (+37 more)
renderer/devices/device_singleray/clustering/lightslice/gsl/lib/: cblas.lib
renderer/devices/device_singleray/clustering/lsLightcuts/: lcDivisiveLightTreeBuilder.cpp  lcDivisiveLightTreeBuilder.h  lcIntegrator.cpp  lcIntegrator.h  lcLightGenerator.h  lcLightTree.cpp  lcLightTree.h  lcLightTreeBuilder.h  lcLightTreeBuilderUtil.h  lcLightcutter.cpp  lcLightcutter.h  lcMTLightcutter.cpp  lcMTLightcutter.h  lcRenderer.cpp  lcRenderer.h  lcVLight.h
renderer/devices/device_singleray/clustering/mdLightcuts/: mdGatherTree.h  mdGatherTreeBuilder.cpp  mdGatherTreeBuilder.h  mdIntegrator.cpp  mdIntegrator.h  mdLightcutter.cpp  mdLightcutter.h  mdMTLightcutter.cpp  mdMTLightcutter.h  mdRenderer.cpp  mdRenderer.h
renderer/devices/device_singleray/clustering/vpl/: vplIntegrator.cpp  vplIntegrator.h  vplRenderer.cpp  vplRenderer.h  vplVPL.h
renderer/devices/device_singleray/integrators/: integrator.h  pathtraceintegrator.cpp
renderer/devices/device_singleray/lights/: directionallight.h  hdrilight.cpp  hdrilight.h  light.h  spotlight.h  trianglelight.h
renderer/devices/device_singleray/renderers/: integratorrenderer.cpp
renderer/devices/device_singleray/samplers/: patterns.h  sampler.cpp
(+22 files in other folders)
